--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ langchain_chroma>=0.0.1
 langsmith>=0.1.0
 tiktoken
 sentence-transformers
+beautifulsoup4 
+lxml
 
 # Vector store / database
 chromadb>=0.3.0
