--- a/requirements.txt
+++ b/requirements.txt
@@ -19,9 +19,10 @@ streamlit
 # -----------------------------
 # Backend API (FastAPI + Uvicorn)
 # -----------------------------
-fastapi>=0.115.0
-uvicorn[standard]>=0.30.0
-python-multipart>=0.0.6
+fastapi[all]
+#fastapi>=0.115.0
+#uvicorn[standard]>=0.30.0
+#python-multipart>=0.0.6
 
 # Optional extras for Chroma / HuggingFace
 requests
