--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,8 @@ streamlit
 # -----------------------------
 # Backend API (FastAPI + Uvicorn)
 # -----------------------------
-fastapi[all]
+fastapi #[all]
+uvicorn
 #fastapi>=0.115.0
 #uvicorn[standard]>=0.30.0
 #python-multipart>=0.0.6
