--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
 # Core LangChain packages
-langchain>=0.1.0
+#langchain>=0.1.0
 langchain-google-genai>=0.0.1
-langchain-community>=0.1.0
+#langchain-community>=0.1.0
 langchain_huggingface>=0.0.1
 langchain_chroma>=0.0.1
-langsmith>=0.1.0
-tiktoken
+#langsmith>=0.1.0
+#tiktoken
+#beautifulsoup4 
+#lxml
 #sentence-transformers
-beautifulsoup4 
-lxml
 
 # Vector store / database
-chromadb>=0.3.0
+#chromadb>=0.3.0
 
 # Front-end app (Streamlit)
-streamlit
+#streamlit
 
 # -----------------------------
 # Backend API (FastAPI + Uvicorn)
@@ -26,5 +26,5 @@ uvicorn
 #python-multipart>=0.0.6
 
 # Optional extras for Chroma / HuggingFace
-requests
+#requests
 pydantic>=2.0
